Added Facebook OAuth2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,11 @@ spring.mvc.log-request-details=true
 
 spring.security.oauth2.client.registration.github.client-id=e053656442e5ed68b4d0
 spring.security.oauth2.client.registration.github.client-secret=e5464428fb602eee916681e37e8262ff55ae1333
+
+
+#spring.security.oauth2.client.registration.twitch.client-id=evdct0mtuki8lwo17z0xlc239kyfrf
+#spring.security.oauth2.client.registration.twitch.client-secret=q1h4843zgop3171nx1fkc7exq93j7n
+#spring.security.oauth2.client.registration.twitch.authorization-grant-type=authorization_code
+
+spring.security.oauth2.client.registration.facebook.client-id=6097473473648744
+spring.security.oauth2.client.registration.facebook.client-secret=4d7ac81b1a172bf85cdac02b93003431
